# kalsangati

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: sample_export-01.csv  sample_export.csv
docs/: architecture.md  faq.md  label_system.md  naming.md  niyam_format.md  notifications.md  task_planner.md  user_guide.md
kalsangati/: README.md  __init__.py  analytics.py  db.py  exceptions.py  ingest.py  labels.py  niyam.py  notifications.py  projects.py  tasks.py  tracker.py  vimarsha.py
kalsangati/gui/: __init__.py  analytics_dashboard.py  label_manager.py  main_window.py  niyam_compare.py  niyam_editor.py  override_dialog.py  settings.py  stopwatch.py  task_planner.py
kalsangati/services/: __init__.py  commit_stopwatch_session.py  ingest_csv.py
tests/: __init__.py  conftest.py  test_commit_stopwatch_session.py  test_db.py  test_ingest.py  test_ingest_service.py  test_labels.py  test_niyam.py  test_stopwatch_wiring.py  test_tasks.py
