[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalsangati"
version = "0.1.0"
description = "Coherence with Time — Plan the cycle. Live the line. Close the gap."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kālsangati Contributors" }]
keywords = ["time-tracking", "schedule", "productivity", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "PyQt5>=5.15",
    "pandas>=2.0",
    "watchdog>=3.0",
    "plyer>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]
linux = [
    "ewmh>=0.1",
    "python-xlib>=0.33",
]

[project.scripts]
kalsangati = "kalsangati.gui.main_window:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102","E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kalsangati --cov-report=term-missing"
