[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalsangati"
version = "0.1.0"
description = "Coherence with Time — Plan the cycle. Live the line. Close the gap."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kālsangati Contributors" }]
keywords = ["time-tracking", "schedule", "productivity", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "PyQt5>=5.15",
    "pandas>=2.0",
    "watchdog>=3.0",
    "plyer>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]
linux = [
    "ewmh>=0.1",
    "python-xlib>=0.33",
]

[project.scripts]
kalsangati = "kalsangati.gui.main_window:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102","E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Missing type stubs for third-party dependencies.  plyer and ewmh
# don't ship .pyi files; silencing at the mypy level is the
# ecosystem-standard remedy, not a sign of bad code on our side.
[[tool.mypy.overrides]]
module = ["plyer.*", "ewmh.*", "Xlib.*"]
ignore_missing_imports = true

# PyQt5's type stubs pessimistically declare many methods as returning
# `T | None` even where the underlying Qt contract guarantees non-None:
# QMainWindow.menuBar(), QTableWidget.horizontalHeader(),
# QLayout.itemAt(), etc.  Fighting this produces more noise than safety.
# Silence union-attr for the gui package only.
[[tool.mypy.overrides]]
module = "kalsangati.gui.*"
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kalsangati --cov-report=term-missing"
